内置服装新增Mujica演出服装

--- a/config.yaml
+++ b/config.yaml
@@ -277,6 +277,7 @@ costume_mapping:
   - 038_school_winter-2023
   - 038_live_default
   - 038_casual-2023
+  - 343_event_286_story_01
   39:
   - 039_school_summer-2023
   - 039_school_winter-2023
@@ -295,21 +296,26 @@ costume_mapping:
   - 337_school_winter-2023
   - 337_casual-2023
   - 337_casual-2023_nocap
+  - 337_event_297_story_01
   338:
   - 338_school_summer-2023
   - 338_school_winter-2023
   - 338_casual-2023
+  - 338_event_297_story_01
   339:
   - 339_school_summer-2023
   - 339_school_winter-2023
   - 339_casual-2023
+  - 339_event_297_story_01
   340:
   - 340_casual-2023
+  - 340_event_297_story_01
   341:
   - 341_jh_school_winter-2023
   - 341_school_summer-2023
   - 341_school_winter-2023
   - 341_casual-2023
+  - 341_event_297_story_01
 default_costumes:
   1: 001_casual-2023
   2: 002_casual-2023
